# text-to-pdf-service

./: .dockerignore  .gitignore  ANALISIS_PR_DEPENDABOT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.agent/workflows/: serve.md  setup.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: review_rules.md
.github/workflows/: ci.yml  codeql.yml  pr_agent.yml
docs/: AI_DEVELOPMENT.md  COMMIT_CONVENTIONS.md  api.md  architecture.md  tests.md
docs/es/: AI_DEVELOPMENT.md  CODE_OF_CONDUCT.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  README.md  api.md  architecture.md  tests.md
scripts/: process_local.py
src/adapters/driven/: fs_adapter.py  fs_archiver.py  pdf_adapter.py
src/adapters/driving/: api.py  cli.py
src/application/: service.py
src/domain/: exceptions.py  model.py  ports.py
src/infrastructure/: logger.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_fs_adapter.py  test_service.py
